# MLInference

./: .dockerignore  .gitignore  README.md  pytest.ini  requirements.txt
.github/workflows/: ci_pipeline.yml
conf/: config.yaml
cpp_inference/: CMakeLists.txt  config.yaml
cpp_inference/src/: main.cpp
docker/: Dockerfile.inference  Dockerfile.training
ml_src/: data_loader.py  export_onnx.py  model.py  train.py
mlruns/1/1dcfd8931cc848f7895f7a1a36b48941/artifacts/: config.yaml
mlruns/1/1dcfd8931cc848f7895f7a1a36b48941/artifacts/onnx_model/: model.onnx
mlruns/1/8a836aa2372144029b96a4ee8a8cbd65/artifacts/onnx_model/: model.onnx
mlruns/1/9689512456dc4dc8a386fb883a7a3c28/artifacts/onnx_model/: model.onnx
mlruns/1/models/m-1282b65b88bf4dc0ae4ae259299f0c47/artifacts/: MLmodel  conda.yaml
mlruns/1/models/m-1282b65b88bf4dc0ae4ae259299f0c47/artifacts/data/: model.pth
mlruns/1/models/m-32514577d6c34396bf83d2e56de1113a/artifacts/: MLmodel
mlruns/1/models/m-32514577d6c34396bf83d2e56de1113a/artifacts/data/: model.pth
mlruns/1/models/m-e9de9deb680641a29f1c813e191ac0c4/artifacts/: MLmodel
scripts/: benchmark_api.py
service/: app.py
tests/: test_model_structure.py  test_onnx_export.py  test_service_api.py
